--- a/BE/notificatoin-service/notificatoin-service/src/main/resources/application.properties
+++ b/BE/notificatoin-service/notificatoin-service/src/main/resources/application.properties
@@ -7,10 +7,10 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/kanban_board_db
+spring.datasource.url=
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
@@ -21,8 +21,8 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 
 #configure mail sender
-spring.mail.username=sonikadesamsetty111@gmail.com
-spring.mail.password=xvyadxaedueglucg
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
